Missing WebRTC Metrics in iOS Safari https://bugs.webkit.org/show_bug.cgi?id=212668 <rdar://problem/63902458>

Reviewed by Eric Carlson.

Source/WebCore:

Expose more transports related stats.
Covered by updated test.

* Modules/mediastream/RTCStatsReport.h:
* Modules/mediastream/RTCStatsReport.idl:
* Modules/mediastream/libwebrtc/LibWebRTCStatsCollector.cpp:
(WebCore::fillRTCTransportStats):

LayoutTests:

* webrtc/video-stats-expected.txt:
* webrtc/video-stats.html:


Canonical link: https://commits.webkit.org/225725@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262728 268f45cc-cd09-0410-ab3c-d52691b4dbfc